Resolved issues with sticky footer; tweaked styles for main content area to begin addressing overflow issues in XS screens

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ h1 {
 
 img {
     padding-bottom: 20px;
+    max-width: 700px;
     width: inherit;
 }
 
@@ -30,6 +31,10 @@ a {
 
 article {
     padding: 10px;
+}
+
+p {
+    display: inline-block;
 }
 
 ul {
@@ -46,15 +51,13 @@ ul {
 #footer {
     background-color: #777777;
     border-top: 5px solid teal;
-    bottom: 0;
     color: #afafaf;
     font-size: 10px;
     line-height: 60px;
-    position: relative;
+    position: fixed;
     bottom: 0;
     text-align: center;
     width: 100%;
-    z-index: 1;
 }
 
 .no-padding {
